--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ $conn = new mysqli($server, $userid, $pw );
 
 // Check connection
 if ($conn->connect_error) {
- die("Connection failed!: " . $conn->connect_error);
+ die("Connection failed: " . $conn->connect_error);
 }
 echo "Connected successfully<br>";
 
