--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <?php
-$server = "https://us116.siteground.us/phpmyadmin/index.php?route=/";// your server
+$server = "localhost";// your server
 $userid = "u9tluqn8loftu"; // your user id
 $pw = "gshsjkmcea9k"; // your pw
 $db= "dbkzbj90eo4smd"; // your database
